--- a/style.css
+++ b/style.css
@@ -89,8 +89,8 @@ nav .login img {
   gap: 2rem;
   margin: 2rem 1rem 0 1.1rem;
   background-color: inherit;
-  grid-template-rows: masonry;
   grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: max-content;
   justify-items: center;
   justify-content: center;
   align-items: center;
@@ -310,7 +310,7 @@ input::file-selector-button {
 
 @media (max-width: 800px) {
   .books-grid {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: 1fr;
   }
 
   .add-button {
